syntax="proto3";

option java_package="com.pccc.touda.grpc.test";
option java_multiple_files=true;

message HelloStreamRequest{
        string id=1;
        string fileType=2;
        bytes chunk_data=3;
}